--- a/src/VisualStudioBuildScriptGenerator/MainWindow.xaml
+++ b/src/VisualStudioBuildScriptGenerator/MainWindow.xaml
@@ -11,22 +11,73 @@
         <local:MainViewModel/>
     </Window.DataContext>
 
-    <StackPanel Orientation="Vertical">
-        <StackPanel Orientation="Horizontal">
-
+    <Window.Resources>
+        <Style TargetType="{x:Type TextBlock}">
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="0, 0, 5, 0"/>
+        </Style>
+    </Window.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Vertical">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="方案組態"/>
-                <ComboBox ItemsSource="{Binding Configurations}"
+                <StackPanel.Resources>
+                    <Style TargetType="{x:Type StackPanel}">
+                        <Setter Property="Margin" Value="0, 0, 10, 0"/>
+                    </Style>
+                </StackPanel.Resources>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="方案組態："/>
+                    <ComboBox ItemsSource="{Binding Configurations}"
                           SelectedItem="{Binding ConfigurationSelected}"
                           DisplayMemberPath="Name" />
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="方案平台："/>
+                    <ComboBox ItemsSource="{Binding Platforms}" 
+                              SelectedItem="{Binding PlatformSelected}" 
+                              DisplayMemberPath="Name" />
+                </StackPanel>
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="方案平台"/>
-                <ComboBox ItemsSource="{Binding Platforms}"
-                          SelectedItem="{Binding PlatformSelected}"
-                          DisplayMemberPath="Name" />
-            </StackPanel>
+            <Button Content="新增檔案複製路徑"
+                    Command="{Binding AddCopyPathCommand}"/>
+
+            <ScrollViewer Height="150" VerticalScrollBarVisibility="Visible">
+                <ItemsControl ItemsSource="{Binding FilesCopyPath}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Vertical"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding}"/>
+                                <Button Content="刪除"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
         </StackPanel>
-    </StackPanel>
+
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <TextBox AcceptsReturn="True" Grid.Row="1"
+                     Text="{Binding ScriptEdit, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
+            <StackPanel Orientation="Horizontal" Grid.Row="1">
+                <Button Content="產出"/>
+            </StackPanel>
+        </Grid>
+    </Grid>
 </Window>
