--- a/src/VisualStudioBuildScriptGenerator/MainWindow.xaml
+++ b/src/VisualStudioBuildScriptGenerator/MainWindow.xaml
@@ -1,32 +1,41 @@
-﻿<Window x:Class="VisualStudioBuildScriptGenerator.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VisualStudioBuildScriptGenerator"
+    x:Class="VisualStudioBuildScriptGenerator.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/VisualStudioBuildScriptGenerator;component/Styles/Buttons.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/VisualStudioBuildScriptGenerator;component/Styles/ComboBoxes.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="{x:Type TextBlock}">
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="Margin" Value="0, 0, 5, 0"/>
+            </Style>
+        </ResourceDictionary>
+
+    </Window.Resources>
 
     <Window.DataContext>
         <local:MainViewModel/>
     </Window.DataContext>
 
-    <Window.Resources>
-        <Style TargetType="{x:Type TextBlock}">
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Margin" Value="0, 0, 5, 0"/>
-        </Style>
-    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Vertical">
+        <StackPanel Orientation="Vertical" >
             <StackPanel Orientation="Horizontal">
                 <StackPanel.Resources>
                     <Style TargetType="{x:Type StackPanel}">
-                        <Setter Property="Margin" Value="0, 0, 10, 0"/>
+                        <Setter Property="Margin" Value="0, 3, 10, 6"/>
                     </Style>
                 </StackPanel.Resources>
 
@@ -48,7 +57,7 @@
                     <TextBlock Text="方案組態："/>
                     <ComboBox ItemsSource="{Binding Configurations}"
                           SelectedItem="{Binding ConfigurationSelected}"
-                          DisplayMemberPath="Name" />
+                          DisplayMemberPath="Name"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal">
@@ -89,7 +98,7 @@
                                     <TextBox Text="{Binding DestinationFolderPath, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"/>
                                 </StackPanel>
                                 <Button Content="刪除" Grid.Column="1"
-                                        Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}, Mode=FindAncestor}, Path=DataContext.SelectedFilePathDeleteCommand}"
+                                        Command="{Binding DataContext.SelectedFilePathDeleteCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}, Mode=FindAncestor}}"
                                         CommandParameter="{Binding}"/>
                             </Grid>
                         </DataTemplate>
