--- a/src/VisualStudioBuildScriptGenerator/Styles/Buttons.xaml
+++ b/src/VisualStudioBuildScriptGenerator/Styles/Buttons.xaml
@@ -1,4 +1,45 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <Style TargetType="{x:Type Button}">
+        <Style.Setters>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Grid>
+                            <Border Background="#2277BB" Margin="0, 5" Padding="10, 6"
+                                    CornerRadius="5">
+                                <TextBlock Text="{TemplateBinding Content}" 
+                                           Foreground="white" 
+                                           FontSize="16"
+                                           HorizontalAlignment="Center" 
+                                           VerticalAlignment="Center"/>
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+    </Style>
+
+    <Style x:Key="ConfirmButton" 
+           TargetType="{x:Type Button}">
+        <Style.Setters>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Grid>
+                            <Border Background="#6ab82d" Margin="0, 5" Padding="10, 6"
+                                    CornerRadius="5">
+                                <TextBlock Text="{TemplateBinding Content}" 
+                                           Foreground="white"
+                                           FontSize="16"
+                                           HorizontalAlignment="Center" 
+                                           VerticalAlignment="Center"/>
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+    </Style>
 </ResourceDictionary>
