--- a/src/VisualStudioBuildScriptGenerator/MainWindow.xaml
+++ b/src/VisualStudioBuildScriptGenerator/MainWindow.xaml
@@ -22,7 +22,14 @@
             <Style TargetType="{x:Type ComboBox}">
                 <Setter Property="HorizontalContentAlignment" Value="Center"/>
                 <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="HorizontalAlignment" Value="Center"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
                 <Setter Property="FontSize" Value="16"/>
+            </Style>
+
+            <Style TargetType="{x:Type TextBox}">
+                <Setter Property="FontSize" Value="15"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
             </Style>
         </ResourceDictionary>
 
@@ -78,10 +85,11 @@
             </StackPanel>
 
             <StackPanel Orientation="Vertical">
-                <Button Content="設定專案根目錄"
-                        Command="{Binding SetProjectRootPathCommand}"/>
-                <TextBox Text="{Binding ProjectRootPath, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"
-                         Height="30"/>
+                <Button Content="設定腳本執行路徑"
+                        Command="{Binding SetScriptPathCommand}"/>
+
+                <TextBox Text="{Binding ScriptPath, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"
+                         Height="30" />
             </StackPanel>
 
             <Button Content="新增檔案複製路徑"
@@ -102,11 +110,13 @@
                                     <ColumnDefinition/>
                                     <ColumnDefinition Width="auto"/>
                                 </Grid.ColumnDefinitions>
-                                <StackPanel Orientation="Horizontal" Grid.Column="0">
-                                    <TextBox Text="{Binding SourceFilePath, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"/>
-                                    <TextBlock Text=";"/>
-                                    <TextBox Text="{Binding DestinationFolderPath, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"/>
+                                <StackPanel Orientation="Horizontal" Grid.Column="0"
+                                            VerticalAlignment="Center">
+                                    <TextBox Text="{Binding SourceFilePath, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                                    <TextBlock Text=" ; "/>
+                                    <TextBox Text="{Binding DestinationFolderPath, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
                                 </StackPanel>
+
                                 <Button Content="刪除" Grid.Column="1"
                                         Command="{Binding DataContext.SelectedFilePathDeleteCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}, Mode=FindAncestor}}"
                                         CommandParameter="{Binding}"/>
@@ -142,6 +152,10 @@
                         Margin="10, 0">
                 <Button Style="{StaticResource ConfirmButton}" 
                         Content="產出" Command="{Binding OutputCommand}"/>
+
+                <Button Style="{StaticResource ResetButton}" Margin="10, 0" 
+                        Background="Orange"
+                        Content="重置" Command="{Binding ResetCommand}"/>
             </StackPanel>
         </Grid>
     </Grid>
