--- a/src/VisualStudioBuildScriptGenerator/Styles/Buttons.xaml
+++ b/src/VisualStudioBuildScriptGenerator/Styles/Buttons.xaml
@@ -52,4 +52,26 @@
             </Setter>
         </Style.Setters>
     </Style>
+
+    <Style x:Key="ResetButton" 
+           TargetType="{x:Type Button}">
+        <Style.Setters>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Grid>
+                            <Border Background="Orange" Margin="0, 5" Padding="10, 6"
+                                    CornerRadius="5">
+                                <TextBlock Text="{TemplateBinding Content}" 
+                                           Foreground="white"
+                                           FontSize="16"
+                                           HorizontalAlignment="Center" 
+                                           VerticalAlignment="Center"/>
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+    </Style>
 </ResourceDictionary>
